--- a/index.html
+++ b/index.html
@@ -3,11 +3,44 @@
 
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>San Diego Top Spots</title>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
+    <script src="main.js"></script>
+    <style>
+        tr:nth-child(even) {background: #CCC !important}
+        tr:nth-child(odd) {background: #FFF !important}
+
+
+    </style>
+
+    
 </head>
 
 <body>
     <!-- Write your markup here -->
+    <h1>San Diego Top Spots</h1>
+    <table> 
+       <thead>
+         <tr> 
+            <th>Name</th>
+            <th>Description</th>
+            <th>Link</th>
+         </tr>    
+        </thead> 
 
+        <tbody id = "tableRow-data"></tbody>
+    </table>
     <!-- Don't forget to add your <script> tag here -->
+       
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
+  
+
+  
 </body>
 </html>
